Stricter typing (#11)
* Update type (tags and measures)documentation as I now intend it

* Inline tag strings

* Inline tag strings typecheck

* Inline tag arithmetic values

* Stricter unit matching, no mixup between scalars and untyped

* Specify numeric format when composing a measure

* Compose tagged values

* Compose tagged values autotypes and checks data

* Composer failure (not error) when key value composition doesn't type check

* Prefer autotyping to outer tag

* Tweaks and corrections

* Comparing raw and tagged values is error. Implicit tags from context.

* Raw message identity on raw values. Type match for numeric and string quantities. New jar.

* Tweaks. Make composer error on incorrect tag assignment. New jar

* Mark tags with tick instead of parens. Check all examples, in doc too. New jar.

* Performance test

* Effective types in N-queens. Fix type-test bug. New jar.

* Better error messages. New jar

* Keep java16 binary format

* Allow equality matching of basic variants of the same type. New jar.

* Error on invalid matcher value for tag context. New jar.

* Tag context is implicit type match. New jar.