@@ -20,17 +20,17 @@ public class ArrayMatch implements Membrane {
   }
 
   @Override
-  public Object permeate(Object toMatch, Object it, Scope scope) {
+  public Object permeate(Object toMatch, Object it, Scope scope, String contextTag) {
     if (!(toMatch instanceof TailspinArray listToMatch)) return null;
-    if (lengthMembrane != null && (null == lengthMembrane.permeate((long) listToMatch.length(), it, scope))) {
+    if (lengthMembrane != null && (null == lengthMembrane.permeate((long) listToMatch.length(), it, scope,
+        contextTag))) {
       return null;
     }
     if (contentMatcherFactories.isEmpty()) {
       return toMatch;
     }
     List<CollectionCriterion> criteria = contentMatcherFactories.stream()
-        .map(CollectionCriterionFactory::newCriterion).collect(
-            Collectors.toList());
+        .map(CollectionCriterionFactory::newCriterion).toList();
     TailspinArray.Tail tail = listToMatch.tailFrom(1);
     nextElement:
     while(!tail.isEmpty()) {
